# habe-crypto-backend

./: .gitignore  ANALYSIS_LAB_HIERARCHICAL_ENCRYPTION.md  Dockerfile  README.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt
.hypothesis/constants/: 078e81a4b97d5b24  09f58c6382cee70c  25eb88f7b4373604  2d1f955da4bafdbb  2ef5db7fe3adf20e  2f2bd8a0828759fb  3460d4d429b8ef2e  46c932f0f4dd7197  564edcbcd80a9152  6246a8aef79292a2  72de06704507142a  74b04d1d72fed034  8b28a60291040e6b  99e77e2915427b40  a13df53234d0a06e  bda2d699681d6258  d6a015e436367b0e  fbad0f2a5086b34b
.kiro/specs/habe-crypto-backend/: design.md  requirements.md  tasks.md
.kiro/specs/s3-tiered-storage/: .config.kiro  design.md  requirements.md  tasks.md
backend/: __init__.py  config.py  exceptions.py  main.py
backend/models/: __init__.py  requests.py  responses.py
backend/routers/: __init__.py  admin.py  files.py  health.py
backend/services/: __init__.py  crypto_service.py  storage_service.py
crypto_module/: __init__.py  core.py  exceptions.py  serialization.py
deploy/: main.tf  variables.tf
docs/: DEPLOY_AWS.md  PRESENTATION.md  architecture.md
frontend/: index.html
modules/s3-tiered-storage/: main.tf  outputs.tf  variables.tf
scripts/: init-localstack.sh
tests/: __init__.py  conftest.py  test_api_download.py  test_api_upload.py  test_crypto_core.py  test_crypto_roundtrip.py  test_health.py  test_serialization.py  test_storage_service.py
